Refactored navBar - not completed(hamburger menu missing). added about and footer component - still buggy and not responsive enough.

--- a/src/components/navBar/navBar.css
+++ b/src/components/navBar/navBar.css
@@ -1,53 +1,62 @@
 .navbar-container {
   display: flex;
   flex-direction: row;
-  width: 100vw;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
   height: 53px;
-  padding: 14px 123px 5px;
-  background-color: var(--white);
+  background-color: white;
+  margin-top: 6px;
 }
 
+.left-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-right: 28vw;
+}
+
+.right-nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
 .logo-icon {
   width: 33px;
   height: 33px;
-  margin-left: 8.5vw;
-  /* margin: 0 15px 1px 0; */
   object-fit: contain;
+  margin: 0 15px 1px 0;
 }
 
 .logo {
-  /* width: 115px;
-  height: 32px; */
-  margin-left: 1vw;
+  width: 115px;
+  height: 32px;
   font-family: HelveticaNeue;
-  font-size: 27px;
+  font-size: 1.6875rem;
   font-weight: 100;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: 1.35px;
-  color: var(--black);
+  color: black;
 }
 
 .menu-link {
-  /* width: 110px;
-  height: 21px; */
-  margin: 7px 28px 6px 31px;
+  width: 110px;
+  height: 21px;
   text-decoration: none;
   font-family: HelveticaNeue;
-  font-size: 18px;
+  margin: 7px 28px 6px 31px;
+  font-size: 1.125rem;
   font-weight: 100;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: 1.92px;
-  color: var(--black);
+  color: black;
 }
 
 .search-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 415px;
-  height: 34px;
-margin-left:20vw;
+  /* height: 34px; */
   padding: 7px 13px 5px 16px;
   object-fit: contain;
   border-radius: 4px;
@@ -61,71 +70,115 @@ margin-left:20vw;
   border: none;
   opacity: 0.8;
   font-family: HelveticaNeue;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 100;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: 1.29px;
   text-align: center;
-  color: var(--black);
+  color: black;
 }
 
-.search-icon {
-  width: 22px;
-  height: 22px;
-  margin: 0 0 0 63px;
-  object-fit: contain;
+.serarch-icon {
+    width: 22px;
+    height: 22px;
+    object-fit: contain;
 }
 
 .user-icon {
   width: 23px;
-  height: 23px;
-  margin: 7px 28px 4px;
-  object-fit: contain;
+  margin-left: 28px;
+  margin-right: 28px;
+    object-fit: contain;
 }
 
 .bag-icon {
   width: 22px;
-  height: 22px;
-  margin: 7px 0 5px 28px;
   object-fit: contain;
 }
-.burger-icon{
-    display: none;
+.burger-icon {
+  display: none;
 }
+
+.search-icon-mobile {
+    display: none;
+  }
+
+  @media only screen and (max-width: 850px) {
+    .navbar-container {
+        display: flex;
+        flex-direction: row;
+    
+      }
+    .left-nav {
+        
+        margin-right: 0vw;
+      }
+  }
+
 /** Mobile **/
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 650px) {
   .navBar-container {
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
     height: 45px;
-    /* padding: 8px 172px 7px; */
-    background-color: var(--white);
+    padding: 0;
+    background-color: white;
   }
-  .burger-icon{
+
+  .left-nav {
+    margin-right: 0;
+  }
+
+  .burger-icon {
     display: block;
-      width: 18px;
-  height: 14px;
-  margin-left: 5.3vw;
-  /* margin: 11px 134px 5px 0; */
-  object-fit: contain;
-}
-  .logo {
-    display: none;
+    width: 18px;
+    height: 14px;
+    object-fit: contain;
   }
-  .search {
+
+  .logo {
     display: none;
   }
   .logo-icon {
     width: 33px;
     height: 33px;
     object-fit: contain;
+    margin-left: 26vw;
   }
 
+  .search-container {
+display: none;
+  }
+
+  .search {
+    display: none;
+  }
+
+  .search-icon-mobile {
+      display: block;
+    width: 18px;
+    height: 18px;
+    object-fit: contain;
+  }
+
+  .user-icon {
+    width: 18px;
+    height: 18px;
+    object-fit: contain;
+  }
+
+  .bag-icon {
+    width: 18px;
+    height: 18px;
+    object-fit: contain;
+  }
   .menu-link {
     display: none;
+  }
+
+  .mobile-links{
+height: 100vh;
+width: 100vw;
   }
 }
